# motor-measurements

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: download_dataset.py  simple_reader.py  test_reader.py
src/motor_temperature_analyzer/: utils.py
src/motor_temperature_analyzer/application/ports/: data_reader_port.py
src/motor_temperature_analyzer/application/use_cases/: analyze_motor_data.py  list_profiles.py
src/motor_temperature_analyzer/domain/entities/: motor_measurements.py
src/motor_temperature_analyzer/infrastructure/adapters/: csv_motor_data_reader.py
src/motor_temperature_analyzer/presentation/api/: main.py
src/motor_temperature_analyzer/presentation/cli/: main.py
src/motor_temperature_analyzer/presentation/schemas/: motor_responses.py
