[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motor-temp-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "kaggle>=2.2.3",
    "kagglehub>=1.0.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

# This tells Python/uv where to find your package
[tool.setuptools.packages.find]
where = ["src"]
